--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     justify-content: space-between;
 }
 
+html {
+    scroll-behavior: smooth;
+  }
+
 * {
     box-sizing: border-box;
 }
@@ -33,4 +37,58 @@ body {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    list-style: none;
+  }
+
+.nav-link {
+    padding: 0 15px;
+    line-height: 50px;
+    transition: .3s;
+    text-decoration: none;
+  }
+
+  .nav-item {
+    padding: 0 35px;
+  }
+
+  .section-item a {
+    color: #829985;
+    text-decoration: none;
+    transition: color 0.5s;
+  }
+  .section-item a:hover {
+    color: #4d2323;
+  }
+
+  .main-container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .section {
+    width: 50%;
+  }
+
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+
+  .section-title {
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 5px;
+    color: #829985;
+  }
+
+  .link {
+    text-decoration: none;
+    color: #829985;
+    transition: color 0.5s;
+  }
+
+  .link:hover {
+    color: #5d7260;
   }
