--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body {
     justify-content: space-between;
 }
 
+a {
+  text-decoration: none;
+ }
+
 html {
     scroll-behavior: smooth;
   }
@@ -45,6 +49,7 @@ html {
     line-height: 50px;
     transition: .3s;
     text-decoration: none;
+
   }
 
   .nav-item {
@@ -57,7 +62,7 @@ html {
     transition: color 0.5s;
   }
   .section-item a:hover {
-    color: #4d2323;
+    color: #004910;
   }
 
   .main-container {
@@ -78,17 +83,5 @@ html {
   .section-title {
     font-size: 20px;
     font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 5px;
-    color: #829985;
-  }
-
-  .link {
-    text-decoration: none;
-    color: #829985;
-    transition: color 0.5s;
-  }
-
-  .link:hover {
-    color: #5d7260;
+    color: #0c0000;
   }
