--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 body {
     font-family: 'Roboto', sans-serif;
-    min-height: 100vh;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
     display: flex;
     flex-direction: column;
@@ -30,6 +29,10 @@ html {
 
 .footer {
     border: 1px solid red;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 0 15px;
 }
 
 .container {
